Adicionando as rotas de Address e Contact
